tests/fail/UnsignedShiftRight.java
package fail;

public class UnsignedShiftRight {
    public static void main(String[] args) {
        System.out.println('a' >>> 42);
    }
}
